Fix footer text overlapping content on mobile

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -2,5 +2,6 @@
   text-align: center;
   height: 2rem;
   margin-top: -2rem;
+  padding-top: 3rem;
   text-align: center;
 }
